[package]
name = "wiringpi"
version = "0.2.1"
authors = ["Erik Hedvall <hello@erikhedvall.nu>"]
build = "build.rs"
exclude = ["cross*", "scripts/*", "wiringPi/**/*.o", "wiringPi/examples/**", "wiringPi/pins/**", "WiringOP/**/*.o", "WiringOP/examples/**", "WiringOP/pins/**", "examples/*"]
description = "An API wrapper for WiringPi, implementing the most important functions and provides a bit of type system convenience. See README.md for Raspberry Pi build instructions."
documentation = "http://ogeon.github.io/docs/rust-wiringpi/master/wiringpi/index.html"
repository = "https://github.com/Ogeon/rust-wiringpi"
readme = "README.md"
keywords = ["wiringpi", "wiring", "raspberry", "pi", "bindings"]
license = "MIT"

[features]
#Build patched version or wiringpi for Orange PI
orangepi = []
development = []

[dependencies]
libc = "0.2"
