[package]
name = "wiringpi"
version = "0.2.4"
authors = ["Erik Hedvall <hello@erikhedvall.nu>"]
build = "build.rs"
exclude = ["cross*", "scripts/*", "wiringPi/**/*.o", "wiringPi/examples/**", "wiringPi/pins/**", "WiringOP/**/*.o", "WiringOP/examples/**", "WiringOP/pins/**", "examples/*", ".travis.yml"]
description = "An API wrapper for WiringPi, implementing the most important functions and provides a bit of type system convenience. See README.md for Raspberry Pi build instructions."
documentation = "https://docs.rs/wiringpi/0.2.4/wiringpi/"
repository = "https://github.com/Ogeon/rust-wiringpi"
readme = "README.md"
keywords = ["wiringpi", "wiring", "raspberry", "pi", "bindings"]
license = "MIT"

[features]
#Build patched version or wiringpi for Orange PI
orangepi = []
development = []

strict = []

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0.4"
glob = "0.2.11"
